# distillme

./: Dockerfile  INSTALL.md  README.md  pyproject.toml
configs/: local.distillme.json
src/distillme/: __init__.py  cli.py  cli_tools.py  config.py  embedding.py  inference.py  ingestion.py  investigator.py  observability.py  orchestration.py  retrieval.py  schemas.py  teacher.py  training.py  validation.py
tests/: test_pipeline.py
