[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "distillme"
version = "0.1.0"
description = "Agentic repository knowledge distillation pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "distillme contributors" }]
keywords = ["knowledge-distillation", "rag", "software-engineering", "llm", "java"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
# ChromaDB vector store and persistent embedding index.
# Enables vector_backend = "chroma" in the retrieval configuration.
chroma = ["chromadb>=1.0.0"]

# sentence-transformers provides local neural embedding models.
# Use with HttpEmbeddingClient pointed at a local text-embeddings-inference
# or Ollama server, or embed directly in Python code.
sentence-transformers = ["sentence-transformers>=2.2.0"]

# Install all optional extras together.
all = ["chromadb>=1.0.0", "sentence-transformers>=2.2.0"]

[project.scripts]
distillme = "distillme.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
